--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,16 @@
 		<module>omod</module>
 	</modules>
 
+	<properties>
+		<openmrsPlatformVersion>1.11.6</openmrsPlatformVersion>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<uiframeworkVersion>3.11.0</uiframeworkVersion>
+		<appframeworkVersion>2.10.0</appframeworkVersion>
+		<uicommonsVersion>2.3.0</uicommonsVersion>
+		<emrApiVersion>1.24.0-SNAPSHOT</emrApiVersion>
+		<appuiVersion>1.8.0</appuiVersion>
+	</properties>
+
 	<dependencyManagement>
 		<dependencies>
 			<!-- Importing versions from refapp distro -->
@@ -38,6 +48,66 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+			<dependency>
+				<groupId>org.openmrs.module</groupId>
+				<artifactId>emrapi-omod</artifactId>
+				<version>${emrApiVersion}</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.openmrs.module</groupId>
+				<artifactId>emrapi-condition-list</artifactId>
+				<scope>provided</scope>
+				<version>${emrApiVersion}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.openmrs.module</groupId>
+				<artifactId>appui-omod</artifactId>
+				<version>${appuiVersion}</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.openmrs.module</groupId>
+				<artifactId>uicommons-omod</artifactId>
+				<scope>provided</scope>
+				<version>${uicommonsVersion}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.openmrs.module</groupId>
+				<artifactId>uicommons-scss</artifactId>
+				<version>${uicommonsVersion}</version>
+				<scope>provided</scope>
+				<type>zip</type>
+			</dependency>
+
+			<dependency>
+				<groupId>org.openmrs.module</groupId>
+				<artifactId>appframework-api</artifactId>
+				<scope>provided</scope>
+				<version>${appframeworkVersion}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.openmrs.module</groupId>
+				<artifactId>uiframework-api</artifactId>
+				<version>${uiframeworkVersion}</version>
+				<scope>provided</scope>
+				<type>jar</type>
+			</dependency>
+
+			<dependency>
+				<groupId>org.openmrs.api</groupId>
+				<artifactId>openmrs-api</artifactId>
+				<type>jar</type>
+				<scope>provided</scope>
+				<version>${openmrsPlatformVersion}</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
@@ -65,7 +135,4 @@
 		</pluginRepository>
 	</pluginRepositories>
 
-	<properties>
-		<openmrsPlatformVersion>1.11.6</openmrsPlatformVersion>
-	</properties>
 </project>
