--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 		<uiframeworkVersion>3.11.0</uiframeworkVersion>
 		<appframeworkVersion>2.10.0</appframeworkVersion>
 		<uicommonsVersion>2.3.0</uicommonsVersion>
-		<emrApiVersion>1.24.0-SNAPSHOT</emrApiVersion>
+		<emrApiVersion>1.23.0</emrApiVersion>
 		<appuiVersion>1.8.0</appuiVersion>
 	</properties>
 
